Se agregaron estilos para la seccion a mostrar cuando el usuario interactue satisfactoriamente con el boton de suscribirse.

--- a/index.html
+++ b/index.html
@@ -69,12 +69,13 @@
   </main>
   
   <div class="container__suscribe">
-    <h2>Thanks for subscribing!</h2>
-    <p>
+    <img src="/assets/images/icon-list.svg" />
+    <h2 class="suscribe__title">Thanks for subscribing!</h2>
+    <p class="suscribe__description">
       A confirmation email has been sent to
       ash@loremcompany.com. Please open it and click the button inside to confirm your subscription.
     </p>
-    <button type="submit">Dismiss message</button>
+    <button class="suscribe__button" type="submit">Dismiss message</button>
   </div>
   
 </body>
