Se agregaron id para identifcar los elementos cuando trabajemos con el arvhivo main.js. Se enlazo el archivo main.js con el index.html. Se volvio a visualizar el formulario para trabajar con este.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <title>
     Frontend Mentor | Newsletter sign-up form with success message
   </title>
+  
+  <script type="module" src="../main.js"></script>
 </head>
 
 <body>
@@ -57,8 +59,8 @@
         <footer class="article__footer">
           <form class="footer__form" action="" method="post" accept-charset="utf-8">
             <label class="label__email" for="email">Email address</label>
-            <input class="input__email" type="email" name="email" id="email" value="" placeholder="email@company.com" />
-            <button class="form__button" type="submit">
+            <input id="email" class="input__email" type="email" name="email" id="email" value="" placeholder="email@company.com" />
+            <button id="btnSuscribe" class="form__button" type="submit">
               Subscribe to monthly newsletter
             </button>
           </form>
