Actualiza el formulario de suscripción: mejora la accesibilidad, agrega mensajes de error y optimiza las imágenes responsivas.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
+  <meta name="description" content="Frontend Mentor challenge - Newsletter sign-up form with success message" />
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png" />
   
   <link rel="stylesheet" href="style.css" />
@@ -21,10 +21,8 @@
   <main class="main">
     <article class="article">
       <picture>
-        <source class="article__img" srcset="/assets/images/illustration-sign-up-desktop.svg" media="(min-width: 1280px)" />
-        <source class="article__img" srcset="/assets/images/illustration-sign-up-tablet.svg" media="(min-width: 768px)" />
-        <source class="article__img" src="/assets/images/illustration-sign-up-mobile.svg" media="(min-width: 480px)" />
-        <img class="article__img" src="./assets/images/illustration-sign-up-mobile.svg" alt="" />
+        <source srcset="./assets/images/illustration-sign-up-desktop.svg" media="(min-width: 768px)" />
+        <img class="article__img" src="./assets/images/illustration-sign-up-mobile.svg" alt="" aria-hidden="true"/>
       </picture>
       
       <div class="article__content">
@@ -36,19 +34,19 @@
         <div class="container__list">
           <ul>
             <li>
-              <img src="/assets/images/icon-list.svg" />
+              <img src="/assets/images/icon-list.svg" alt="" aria-hidden="true"/>
               <p>
                 Product discovery and building what matters
               </p>
             </li>
             <li>
-              <img src="/assets/images/icon-list.svg" />
+              <img src="/assets/images/icon-list.svg" alt="" aria-hidden="true"/>
               <p>
                 Measuring to ensure updates are a success
               </p>
             </li>
             <li>
-              <img src="/assets/images/icon-list.svg" />
+              <img src="/assets/images/icon-list.svg" alt="" aria-hidden="true"/>
               <p>
                 And much more!
               </p>
@@ -58,8 +56,13 @@
         
         <footer class="article__footer">
           <form class="footer__form" action="" method="post" accept-charset="utf-8">
-            <label class="label__email" for="email">Email address</label>
-            <input id="email" class="input__email" type="email" name="email" id="email" value="" placeholder="email@company.com" />
+            <div>
+              <div class="label__container">
+                <label class="label__email" for="email">Email address</label>
+                <p class="error__message">Valid email required</p>
+              </div>
+              <input id="email" class="input__email" type="email" name="email" id="email" value="" placeholder="email@company.com" />
+            </div>
             <button id="btnSuscribe" class="form__button" type="submit">
               Subscribe to monthly newsletter
             </button>
@@ -71,13 +74,13 @@
   </main>
   
   <div class="container__suscribe">
-    <img src="/assets/images/icon-list.svg" />
+    <img src="/assets/images/icon-list.svg" alt="" aria-hidden="true"/>
     <h2 class="suscribe__title">Thanks for subscribing!</h2>
     <p class="suscribe__description">
       A confirmation email has been sent to
-      ash@loremcompany.com. Please open it and click the button inside to confirm your subscription.
+      <span class="suscribe__email">@loremcompany.com</span>. Please open it and click the button inside to confirm your subscription.
     </p>
-    <button class="suscribe__button" type="submit">Dismiss message</button>
+    <button id="dismiss-button" class="suscribe__button" type="submit">Dismiss message</button>
   </div>
   
 </body>
