Corrige rutas de imágenes en la lista de productos y mensaje de suscripción

--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
         <div class="container__list">
           <ul>
             <li>
-              <img src="/assets/images/icon-list.svg" alt="" aria-hidden="true"/>
+              <img src="./assets/images/icon-list.svg" alt="" aria-hidden="true"/>
               <p>
                 Product discovery and building what matters
               </p>
             </li>
             <li>
-              <img src="/assets/images/icon-list.svg" alt="" aria-hidden="true"/>
+              <img src="./assets/images/icon-list.svg" alt="" aria-hidden="true"/>
               <p>
                 Measuring to ensure updates are a success
               </p>
             </li>
             <li>
-              <img src="/assets/images/icon-list.svg" alt="" aria-hidden="true"/>
+              <img src="./assets/images/icon-list.svg" alt="" aria-hidden="true"/>
               <p>
                 And much more!
               </p>
@@ -74,7 +74,7 @@
   </main>
   
   <div class="container__suscribe">
-    <img src="/assets/images/icon-list.svg" alt="" aria-hidden="true"/>
+    <img src="./assets/images/icon-list.svg" alt="" aria-hidden="true"/>
     <h2 class="suscribe__title">Thanks for subscribing!</h2>
     <p class="suscribe__description">
       A confirmation email has been sent to
