--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     Frontend Mentor | Newsletter sign-up form with success message
   </title>
   
-  <script type="module" src="../main.js"></script>
+  <script type="module" src="./main.js"></script>
 </head>
 
 <body>
